Fix cabin name and description overflow

--- a/cabin-browser/static/main.css
+++ b/cabin-browser/static/main.css
@@ -119,4 +119,9 @@ ul {
 
 .cabin-description {
     white-space: pre-line;
+    overflow-wrap: break-word;
+}
+
+#cabin-top-info {
+    overflow-wrap: break-word;
 }
